--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,9 @@ tags
 \#*\#
 .\#*
 
+# Other
+*.claude
+
 # -----------------------------------------------------------------------------
 # Operating System Files
 # -----------------------------------------------------------------------------
